# api-gateway

./: Dockerfile  Makefile  gateway.py  justfile  load_envs.sh  pyproject.toml
.github/workflows/: lint-and-test.yml  lint-api-gateway.yml
clients/: comment.py
configs/: dev.yaml  prod.yaml
resolvers/: mutation_resolver.py
schema/: schema.graphql
src/apigateway/: esclient_graphql.py  server.py
src/apigateway/clients/: base_client.py  client_factory.py  comment.py  mod.py  rating.py
src/apigateway/converters/: mod_status_converter.py
src/apigateway/helpers/: datetime_helper.py  id_helper.py  retry.py
src/apigateway/resolvers/: grpc_error_wrapper.py  scalars.py
src/apigateway/resolvers/mutation/: comment.py  mod.py  rating.py
src/apigateway/resolvers/query/: comment.py  mod.py  rating.py  root.py
src/apigateway/schema/: schema.graphql
src/apigateway/schema/mutation/: comment.graphql  mod.graphql
src/apigateway/schema/query/: comment.graphql  mod.graphql  rating.graphql
src/apigateway/stubs/mod/: mod_pb2_grpc.py
src/apigateway/stubs/rating/: rating_pb2.py  rating_pb2.pyi  rating_pb2_grpc.py
src/apigateway/stubs/user/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
src/gateway/: esclient_graphql.py  server.py  settings.py
src/gateway/clients/: base_client.py  client_factory.py  comment.py  mod.py  rating.py
src/gateway/converters/: mod_status_converter.py
src/gateway/helpers/: id_helper.py  retry.py
src/gateway/resolvers/: grpc_error_wrapper.py  mutation_resolver.py  query_resolver.py
src/gateway/resolvers/mutation/: comment.py  mod.py  rating.py  root.py
src/gateway/resolvers/query/: comment.py  mod.py  root.py
src/gateway/schema/: schema.graphql
src/gateway/schema/mutation/: comment.graphql  mod.graphql  rating.graphql
src/gateway/schema/query/: comment.graphql  mod.graphql
src/gateway/stubs/: comment_pb2.py  comment_pb2.pyi  comment_pb2_grpc.py  mod_pb2.py  mod_pb2.pyi  mod_pb2_grpc.py  rating_pb2.py  rating_pb2.pyi  rating_pb2_grpc.py
stubs/: rating_pb2.pyi  rating_pb2_grpc.py
tests/clients/: test_base_client.py  test_client_factory.py
tests/converters/: test_mod_status_converter.py
tests/helpers/: test_datetime_helper.py  test_id_helper.py  test_retry.py
tests/resolvers/: test_comment_mutation.py  test_grpc_error_wrapper.py  test_mod_mutation.py  test_query_resolvers.py  test_rating_mutation.py
