[tool.pdm]
distribution = false

[project]
name = "api-gateway"
version = "0.0.1"
description = "api-gateway for esclient"
authors = [
    {name = "esclient"},
]
dependencies = [
    "ariadne<1.0.0,>=0.26.2",
    "uvicorn<1.0.0,>=0.35.0",
    "grpcio-tools>=1.74.0",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}
