[tool.pdm]
distribution = false

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = false
exclude = '''
/(
  \.git
  | \.hg
  | \.venv
  | venv
  | build
  | dist
  | src/modservice/grpc
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "src/modservice/grpc"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:T20,ARG001",
    "src/gateway/stubs/*:E501,ARG001,ARG002"
]
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "src/modservice/grpc",
]

[tool.ruff]
line-length = 120
target-version = "py310"
preview = true
exclude = [".venv", "build", "dist", "src/modservice/grpc"]
extend-ignore = ["ARG002"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "UP",
    "SIM",
    "T20",
    "ARG",
    "C4",
    "RUF"
]
ignore = [
    "E203",
    "B008",
    "SIM105",
    "RUF001",
    "RUF100",
    "RUF003",
    "RUF002"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "ARG001"]
"src/gateway/resolvers/*" = ["ARG001", "ARG002"]
"src/gateway/stubs/*" = ["E501","ARG001", "ARG002"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = 'src(?:[/\\])modservice(?:[/\\])grpc'
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[project]
name = "api-gateway"
version = "0.0.1"
description = "api-gateway for esclient"
authors = [
    {name = "esclient"},
]
dependencies = [
    "ariadne<1.0.0,>=0.26.2",
    "uvicorn<1.0.0,>=0.35.0",
    "grpcio-tools>=1.74.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}
